--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">  
     <meta charset="utf-8" /> 
-    <title>React App</title>
+    <title>Циничный редактор</title>
   </head>
   <body>
     
